<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_outCheck"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:textSize="20sp"
                />

        <Spinner
                android:id="@+id/type_outCheck"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                style="@style/style_spinner"
                />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subType_outCheck"
                android:gravity="center_vertical"
                android:textSize="20sp"
                />

        <Spinner
                android:id="@+id/subType_outCheck"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                style="@style/style_spinner"
                />

        <Button
                android:id="@+id/btn_addSubType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_addSubType"
                />
    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_outCheck"
                android:gravity="center"
                android:textSize="20sp"
                />

        <EditText
                android:id="@+id/count_outCheck"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="元"
                android:gravity="center"
                android:textSize="20sp"
                />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_outCheck"
                android:gravity="center_vertical"
                android:textSize="20sp"
                />

        <EditText
                android:id="@+id/date_outCheck"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_outCheck"
                android:gravity="center"
                android:textSize="20sp"
                />

        <EditText
                android:id="@+id/detail_outCheck"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                />

    </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

        <Button
                android:id="@+id/submit_outCheck"
                android:layout_marginTop="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit_outCheck"
                />
        <Button
                android:id="@+id/cancel_outCheck"
                android:layout_marginTop="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel_outCheck"
                />

        </LinearLayout>
    <!--近期收入详情-->

</LinearLayout>