<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="#ff6600"
        >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_inCheck"
                android:gravity="center_vertical"
                android:textSize="20sp"
                />

        <Spinner
                android:id="@+id/type_inCheck"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                style="@style/style_spinner"
                />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_inCheck"
                android:gravity="center"
                android:textSize="20sp"
                />

        <EditText
                android:id="@+id/count_inCheck"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:numeric="integer"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="元"
                android:gravity="center"
                android:textSize="20sp"
                />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_inCheck"
                android:gravity="center"
                android:textSize="20sp"
                />

        <EditText
                android:id="@+id/date_inCheck"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_inCheck"
                android:gravity="center"
                android:textSize="20sp"
                />

        <EditText
                android:id="@+id/detail_inCheck"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                />

    </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            <Button
                    android:id="@+id/submit_inCheck"
                    android:layout_marginTop="10dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/submit_inCheck"
                    />
            <Button
                    android:id="@+id/cancel_inCheck"
                    android:layout_marginTop="10dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel_inCheck"
                    />
        </LinearLayout>
    <!--近期收入详情-->

</LinearLayout>