<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#FF6600"
        >


        <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/manager_main"
                android:textSize="20sp"
                android:textColor="#fff"
                android:gravity="center"
                android:background="#FF3300"
                />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >

                        <ImageView
                                android:id="@+id/btn_newInCheck"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center"
                                android:src="@drawable/add"
                                android:onClick="textViewClick"
                                android:clickable="true"
                                />

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/Check_main"
                                android:textSize="20sp"
                                android:gravity="center"
                                android:textColor="#fff"
                                android:layout_marginTop="10dp"
                                />

                </LinearLayout>
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >

                    <ImageView
                            android:id="@+id/btn_checkStatus"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/chart"
                            android:onClick="textViewClick"
                            android:clickable="true"
                            />

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="40dp"
                            android:text="@string/checkStatus_main"
                            android:textSize="20sp"
                            android:gravity="center"
                            android:textColor="#fff"
                            android:layout_marginTop="10dp"
                            />
                </LinearLayout>
        </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/detailCheck_main"
            android:textSize="20sp"
            android:textColor="#fff"
            android:gravity="center"
            android:background="#FF3300"
            />
    <!-- 以下默认显示本周、月、年的收支情况使用fragment+viewPager实现-->
        <LinearLayout
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
                >

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <ImageView
                                android:id="@+id/btn_dayDetailCheck"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center"
                                android:src="@drawable/details"
                                android:onClick="textViewClick"
                                android:clickable="true"
                                />

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/dayCheck_main"
                                android:textSize="20sp"
                                android:gravity="center"
                                android:textColor="#fff"
                                android:layout_marginTop="10dp"
                                />
                 </LinearLayout>

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <ImageView
                                android:id="@+id/btn_mouthDetailCheck"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center"
                                android:src="@drawable/details"
                                android:onClick="textViewClick"
                                android:clickable="true"
                                />

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/mouthCheck_main"
                                android:textSize="20sp"
                                android:gravity="center"
                                android:textColor="#fff"
                                android:layout_marginTop="10dp"
                                />
                </LinearLayout>



        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >



                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <ImageView
                                android:id="@+id/btn_yearDetailCheck"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center"
                                android:src="@drawable/details"
                                android:onClick="textViewClick"
                                android:clickable="true"
                                />

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/yearCheck_main"
                                android:textSize="20sp"
                                android:gravity="center"
                                android:textColor="#fff"
                                android:layout_marginTop="10dp"
                                />
                </LinearLayout>

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <ImageView
                                android:id="@+id/btn_weekDetailCheck"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center"
                                android:src="@drawable/details"
                                android:onClick="textViewClick"
                                android:clickable="true"
                                />

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="扫描二维码"
                                android:textSize="20sp"
                                android:gravity="center"
                                android:textColor="#fff"
                                android:layout_marginTop="10dp"
                                />
                </LinearLayout>

        </LinearLayout>


</LinearLayout>

